k8/openProject-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openproject-deployment
  namespace: default
  labels:
    app: openproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openproject
  template:
    metadata:
      labels:
        app: openproject
    spec:
      containers:
      - name: openproject
        image: openproject/community:11	
        imagePullPolicy: Never
        ports:
          - containerPort: 80
