k8/openProject-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openproject
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.localdev.me
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - backend:
          service:
            name: openproject-service
            port:
              number: 7070
        path: /
        pathType: Prefix
